--- a/src/main/perl/lib/Makefile.in
+++ b/src/main/perl/lib/Makefile.in
@@ -39,8 +39,6 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/autotools/ads_PERL_INCLUDES.m4 \
 	$(top_srcdir)/autotools/ads_PERL_MODULE.m4 \
 	$(top_srcdir)/autotools/ads_PROG_PERL.m4 \
-	$(top_srcdir)/autotools/am_rpm_build_mode.m4 \
-	$(top_srcdir)/autotools/ax_am_conditional_example.m4 \
 	$(top_srcdir)/autotools/ax_deps_check.m4 \
 	$(top_srcdir)/autotools/ax_distcheck_hack.m4 \
 	$(top_srcdir)/autotools/ax_rpmbuild_check.m4 \
@@ -196,8 +194,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = .
 perlrun = @PERL@
-@RPM_BUILD_MODE_FALSE@perlwc = @PERL@ -wc
-@RPM_BUILD_MODE_TRUE@perlwc = \#
+@RPMBUILD_ENABLED_FALSE@perlwc = @PERL@ -wc
+@RPMBUILD_ENABLED_TRUE@perlwc = \#
 
 # this is where we will install these perl modules
 amazondir = @datadir@/perl5/Amazon
