install to perl5libdir

--- a/src/main/perl/lib/Makefile.am
+++ b/src/main/perl/lib/Makefile.am
@@ -12,8 +12,7 @@ perl5libdir = @perl5libdir@
 ax_perl5_extra_includes_opt = @ax_perl5_extra_includes_opt@
 
 # this is where we will install these perl modules
-amazondir = @datadir@/perl5/Amazon
-logdir = @localstatedir@/log
+amazondir = @perl5libdir@/perl5/Amazon
 
 PERLMODULES = \
     Amazon/SSM.pm.in
