remove noise files, install dir had extra perl5

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 **/Makefile
+**/Makefile.in
+autom4te.cache/
+autotools/missing
+autotools/install-sh
+autotools/test-driver
+configure
 config.log
 config.status
 *.tar.gz
